src/test/deca/syntax/invalid/sansObjet/IfExpressionFalse2.deca
{
    int x=2;
    if (return){
        println("x=2");
    }
}